examples/kubernetes/server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shitty-tunnel-server
  labels:
    app.kubernetes.io/name: shitty-tunnel-server
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: shitty-tunnel-server
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
  - name: grpc
    port: 50051
    targetPort: grpc
    protocol: TCP
